Cambios en el sass

--- a/sass/config/_variables.scss
+++ b/sass/config/_variables.scss
@@ -4,3 +4,13 @@ $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 
+// Colores
+$header:#fcdb00;
+$contenido:white;
+$footer:#010101;
+
+// Medidas
+$cero:0px;
+
+// Texto
+$fzparem:16px;
