--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,40 @@
+#header {
+  background-color: #fcdb00; }
 
+.menu0 {
+  display: inline-block; }
+
+.menu {
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+  display: inline-block; }
+
+.menu li {
+  display: inline; }
+
+.menu li + li {
+  margin-left: 1%; }
+
+.menu a {
+  text-decoration: none;
+  color: #010101;
+  font-size: 1.375rem; }
+
+#conteHeader {
+  background-color: #fcdb00; }
+
+.titulos {
+  padding: 0px;
+  margin: 0px;
+  font-size: 2rem; }
+
+.titulo2 {
+  font-size: 1.25rem; }
+
+#container {
+  width: 940px;
+  margin: 0 auto;
+  font-family: Arial, Helvetica, sans-serif; }
 
 /*# sourceMappingURL=style.css.map */
