--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,11 @@
-@import 'layers/layers';
 @import 'config/general';
 @import 'breakpoints/breakpoints';
+@import 'layers/layers';
+
+
+
+#container{
+    width: 940px;
+    margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
