Agrego nuevas variables

--- a/sass/config/_variables.scss
+++ b/sass/config/_variables.scss
@@ -8,9 +8,27 @@ $breakpoint-xl: 1200px;
 $header:#fcdb00;
 $contenido:white;
 $footer:#010101;
+$titulo2:#313841;
+$parrafos:#555555;
+$cajas:#898989;
 
 // Medidas
 $cero:0px;
+$uno:1%;
+$dos:2%;
+$tres:3%;
+$cuatro:4%;
+$cinco:5%;
+$seis:6%;
+$siete:7%;
+$nueve:9%;
+$diez:10%;
+$once:11%;
+$catorce:14%;
+$veinte:20%;
+$cuarenta5:45%;
 
 // Texto
 $fzparem:16px;
+$veinte2:20px;
+$treinta2:32px;
