Agrego estilos pero me falta el menu

--- a/sass/layers/_header.scss
+++ b/sass/layers/_header.scss
@@ -2,6 +2,11 @@
     background-color: $header;
 }
 
+.header1{
+    width: 940px;
+    margin: 0 auto;
+}
+
 .menu0{
     display: inline-block;
 }
