--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,8 +4,8 @@
 
 
 
-#container{
-    width: 940px;
-    margin: 0 auto;
+body{
+    padding: 0;
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
