--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 #header {
+  padding-top: 6%;
   background-color: #fcdb00; }
 
 .header1 {
@@ -6,11 +7,13 @@
   margin: 0 auto; }
 
 .menu0 {
-  display: inline-block; }
-
-.menu {
   padding: 0px;
   margin: 0px;
+  float: right; }
+
+.menu {
+  font-weight: bold;
+  text-decoration: none;
   list-style: none;
   display: inline-block; }
 
@@ -18,7 +21,7 @@
   display: inline; }
 
 .menu li + li {
-  margin-left: 1%; }
+  margin-left: 72px; }
 
 .menu a {
   text-decoration: none;
