Le doy padding a las cajas de abajo

--- a/sass/layers/_contenedor.scss
+++ b/sass/layers/_contenedor.scss
@@ -23,6 +23,10 @@
     padding: $cero $uno $nueve $uno;
 }
 
+.ultima{
+    padding-bottom:18% ;
+}
+
 .ima{
     float: left;
     padding-right: $diez;
