--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
   display: inline; }
 
 .menu li + li {
-  margin-left: 72px; }
+  margin-left: 38px; }
 
 .menu a {
   text-decoration: none;
@@ -30,7 +30,12 @@
 
 #slider {
   background-color: #fcdb00;
-  padding-bottom: 11%; }
+  padding-bottom: 15%; }
+
+.clearfix {
+  display: block;
+  content: "";
+  clear: both; }
 
 .slider1 {
   width: 940px;
@@ -66,7 +71,7 @@
 
 .imagen {
   margin-top: 7%;
-  display: inline-block; }
+  float: right; }
 
 #footer {
   background-color: #010101; }
@@ -85,12 +90,18 @@
   color: #898989; }
 
 #space {
-  width: 56%; }
+  width: 56%;
+  height: 50px;
+  padding: 0;
+  border: 0;
+  border-radius: 5px;
+  color: #898989; }
 
 #btn {
+  width: 12%;
+  height: 50px;
   background-color: #fcdb00;
   border: 0;
-  width: 12%;
   border-radius: 5px;
   text-transform: uppercase;
   font-weight: bold; }
@@ -175,6 +186,9 @@ a {
   display: inline-block;
   padding: 0px 1% 9% 1%; }
 
+.ultima {
+  padding-bottom: 18%; }
+
 .ima {
   float: left;
   padding-right: 10%; }
@@ -200,6 +214,7 @@ a {
   padding-left: 25%; }
 
 body {
+  width: 100%;
   padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif; }
