--- a/sass/layers/_footer.scss
+++ b/sass/layers/_footer.scss
@@ -1,6 +1,11 @@
+// Contenedor padre
 #footer{
+    width: 100%;
     background-color:$footer;
 }
+// Final contenedor padre
+
+// Contenedor secundario
 .footer2{
     padding-top: 7.5%;
     width: 940px;
@@ -8,7 +13,9 @@
     text-align: center;
     padding-bottom: 10%;
 }
+// Final Contenedor secundario
 
+// Estilos de los textos principales
 .color2{
     color: $header;
 }
@@ -16,7 +23,13 @@
 .text3{
     color: $cajas;
 }
+// Final Estilos de los textos principales
 
+// Buscador
+#formulario{
+    padding-bottom:8%; 
+}
+// Barra buscadora
 #space{
     width: 56%;
     height: 50px;
@@ -25,7 +38,9 @@
     border-radius: 5px;
     color: $cajas;
 }
+//  Final Barra buscadora
 
+// Boton del buscador
 #btn{
     width: 12%;
     height: 50px;
@@ -35,11 +50,14 @@
     text-transform: uppercase;
     font-weight: bold;
 }
+// Final del boton
+// Final del buscador
 
-#formulario{
-    padding-bottom:8%; 
+// Sprite
+.sprite1{
+    padding: 0;
+    margin: 0;
 }
-
 .sprite{
     background-image: url(../img/share.png);
     background-repeat: no-repeat;
@@ -47,29 +65,33 @@
 }
 
 .sprite-fb{
-    width: 55px;
+    width: 38px;
     height: 55px;
+    margin-right: 1.5%;
     background-position: 0px  -3px;
 }
 
 .sprite-t{
-    width: 55px;
-    height: 55px;
+    width: 43px;
+    height: 37px;
+    margin-right: 1.5%;
     background-position: -65px -3px;
 }
 
 .sprite-g{
-    width: 55px;
-    height: 55px;
+    width: 45px;
+    height: 37px;
+    margin-right: 1.5%;
     background-position: -130px -3px;
 }
 
 .sprite-p{
-    width: 55px;
-    height: 55px;
+    width: 44px;
+    height: 37px;
     background-position: -200px -3px;
 }
 
 a{
     color: transparent;
 }
+// Final del Sprite
