--- a/sass/layers/_slider.scss
+++ b/sass/layers/_slider.scss
@@ -1,12 +1,14 @@
 #slider{
+    width: 100%;
     background-color: $header;
-    padding-bottom: 15%;
+    padding-bottom: 10%;
 }
 
 .clearfix{
     display: block;
     content: "";
     clear: both;
+    overflow: hidden;
 }
 
 .slider1{
@@ -17,7 +19,7 @@
 .slider2{
     padding-top:$catorce;
     width: $cuarenta5;
-    display: inline-block;
+    float: left;
 }
 
 .titulos{
@@ -42,12 +44,19 @@
     padding: 0  $uno 0  $uno;
 }
 
+.dispositivos{
+    display: none;
+}
+
 .internet{
     margin-left: $tres;
     display: inline;
 }
 
 .imagen{
+    margin: 0 auto;
     margin-top: $siete;
+    max-width: 100%;
+    display: block;
     float: right;
 }
