--- a/sass/breakpoints/_tablet.scss
+++ b/sass/breakpoints/_tablet.scss
@@ -11,44 +11,37 @@
         }
         .menu0{
             display: none;
-        }
+       }
         .share{
+            width: 35%;
             float: right;
             display: block;
         }
         .sprite2{
-            background-image: url(../img/share2.png);
+            background-image:url(../img/share2.png);
             background-repeat: no-repeat;
             display: inline-block;
         }
-
         .sprite-fb2{
             width: 21px;
             height: 19px;
-            margin-right: 2%;
             background-position: 0px  -1px;
         }
-
         .sprite-t2{
             width: 22px;
             height: 19px;
-            margin-right: 2%;
             background-position: -41px -1px;
         }
-
         .sprite-g2{
             width: 22px;
             height: 19px;
-            margin-right: 2%;
             background-position: -81px -1px;
         }
-
         .sprite-p2{
             width: 21px;
             height: 19px;
             background-position: -122px 0;
         }
-
         a{
             color: transparent;
         }
@@ -56,11 +49,18 @@
     #slider{
         .slider2{
             width: 100%;
-            text-align: center;
-            margin: 0 auto;
         }
         .imagen{
             display: none;
+        }
+        .titulos{
+            padding-left:15%; 
+        }
+        .texto{
+            text-align: center;
+            padding-left:6.5%;
+            padding-top: 2.6%;
+            width: 60%;
         }
         .internet{
             display: none;
@@ -69,12 +69,15 @@
             display: inline;
         }
         .sprite3{
+            margin-top:3.3%; 
+            margin-bottom: 22.6%;
             background-image: url(../img/dispositivos.png);
             background-repeat: no-repeat;
             display: inline-block;
         }
 
         .sprite-a{
+            margin-left: 17.5%;
             width: 69px;
             height: 69px;
             margin-right: 3%;
@@ -92,6 +95,59 @@
             width: 69px;
             height: 69px;
             background-position: -210px 0px;
+        }
+        .titulo2{
+            display: none;
+        }
+    }
+    #contenedor{
+        .color{
+          width: 68%;
+          margin-left: 4%;
+        }
+        .texto{
+            text-align: center;
+            padding-left:6.5%;
+            padding-top: 2.6%;
+            width: 60%;
+        }
+        .cTablet{
+            display: none;
+        }
+        .imagen2{
+            margin: 0 auto;
+            margin-top: $siete;
+            max-width: 100%;
+            display: block;
+        }
+        .cajas{
+            width: 25%;
+            padding:0 0 4% 0;
+        }
+        .dere2{
+            float: left;
+        }
+        .sub{
+            padding-left: 5%;
+        }
+        .text2{
+            padding-left: 5%;
+        }
+        .ima{
+            display: none;
+        }
+    }
+    #footer{
+        .footer2{
+            width: 68%;
+        }
+        .sprite1{
+            display: none;
+        }
+    }
+    #subFooter{
+        .sub3{
+            padding-left: 2%;
         }
     }
 }
